@@ -23,6 +23,7 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Controller
@@ -67,7 +68,7 @@ public class AdminReviewsController {
 
         List<RoleAssignment> dataManagers = roleAssignmentsForVault.stream()
                 .filter(roleAssignment -> RoleUtils.isRoleOfName(roleAssignment, "Nominated Data Manager"))
-                .toList();
+                .collect(Collectors.toList());
         model.addAttribute("dataManagers", dataManagers);
 
         roleAssignmentsForVault.stream()
